<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.punto3.MainActivity"
    android:orientation="vertical"
    >


   <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:textColor="@color/black"
           android:textSize="40sp"
           android:background="@color/white"
           android:id="@+id/tOperacion"
           android:gravity="right"

           />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent">
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:background="@color/fuchsia"
            android:text="@string/cborrar"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:id="@+id/bBorrar"
            />
        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:orientation="horizontal"
       >
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/siete"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bSiete"
          />
      <LinearLayout
          android:layout_width="2dp"
          android:layout_height="match_parent">
      </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/ocho"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bOcho"
          />
      <LinearLayout
          android:layout_width="2dp"
          android:layout_height="match_parent">
      </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/nueve"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bNueve"
          />
      <LinearLayout
          android:layout_width="2dp"
          android:layout_height="match_parent">
      </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/fuchsia"
          android:text="@string/mas"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bMas"
          android:onClick="Mas"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="2dp">
   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:orientation="horizontal"
       >
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/cuatro"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bCuatro"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/cinco"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bCinco"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/seis"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bSeis"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/fuchsia"
          android:text="@string/menos"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bMenos"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:orientation="horizontal"
       >
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/uno"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bUno"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/dos"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bDos"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/tres"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bTres"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/fuchsia"
          android:text="@string/multi"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bMulti"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:orientation="horizontal"
       >
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/punto"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bPunto"
          />
      <LinearLayout
          android:layout_width="2dp"
          android:layout_height="match_parent">
      </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/ceros"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bCeros"
          />
      <LinearLayout
          android:layout_width="2dp"
          android:layout_height="match_parent">
      </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/darkgreen"
          android:text="@string/igual"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bIgual"
          />
      <LinearLayout
          android:layout_width="2dp"
          android:layout_height="match_parent">
      </LinearLayout>
      <Button
          android:layout_width="95dp"
          android:layout_height="95dp"
          android:layout_weight="1"
          android:background="@color/fuchsia"
          android:text="@string/div"
          android:textColor="@color/white"
          android:textSize="30dp"
          android:id="@+id/bDiv"
          />
       <LinearLayout
           android:layout_width="2dp"
           android:layout_height="match_parent">
       </LinearLayout>
   </LinearLayout>

</LinearLayout>
